--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reklama √1</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha512-xodZBntMQQ7nH1NQab+g8iQ3H8guD6XoaA5HIILxhOMm+Jq1WfTEFLs+g7mgFZzDEl7m96ewWZ0T8G2Eu4lXQ=="
+      crossorigin=""
+    />
   </head>
   <body>
     <div id="root"></div>
